--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.23.1",
     "next": "^15.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "json-server": "^1.0.0-beta.3",
     "typescript": "^5.7.3"
   }
 }
